Fix tmux change panel

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,10 +11,10 @@ bind-key | split-window -h -c "#{pane_current_path}" # let's open pane with curr
 bind-key _ split-window -v -c "#{pane_current_path}"
 
 # Pane: Vim Style Movements
-bind-key -r h select-pane -L              # go left
-bind-key -r j select-pane -D              # go down
-bind-key -r l select-pane -R              # go right
-bind-key -r k select-pane -U              # go up
+bind-key h select-pane -L              # go left
+bind-key j select-pane -D              # go down
+bind-key l select-pane -R              # go right
+bind-key k select-pane -U              # go up
 
 # Vim Style Pane Resize
 bind-key -r H resize-pane -L 2         # resize a pane two rows at a time.
