Use tmux as default

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,7 +26,7 @@ bind-key -r L resize-pane -R 2
 bind-key ! break-pane -d -n _hidden_pane
 bind-key @ join-pane -s $.0
 
-set -g mouse on
+# set -g mouse on
 
 bind-key -n BTab next-window
 bind-key n new-window
