Add nvim config

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,6 +31,8 @@ set -g mouse on
 bind-key -n BTab next-window
 bind-key n new-window
 
-set -s set-clipboard external
+set -s set-clipboard on
+set-option -sg escape-time 10
+set-option -sa terminal-features ',xterm-256color:RGB'
 
 set -g status-bg colour247
