Remove NERDTree auto load

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,7 @@
 
 set-option -g default-command bash
 set -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",xterm-256color:RGB"
 
 # Split whit | and _
 bind-key | split-window -h -c "#{pane_current_path}" # let's open pane with current directory with -c option
