Start tmux on pane 1

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,10 @@ set-option -g default-command bash
 set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:RGB"
 
+# start window numbers at 1 to match keyboard order with tmux window order
+set -g base-index 1
+set-window-option -g pane-base-index 1
+
 # Split whit | and _
 bind-key | split-window -h -c "#{pane_current_path}" # let's open pane with current directory with -c option
 bind-key _ split-window -v -c "#{pane_current_path}"
