--- a/tmux.conf
+++ b/tmux.conf
@@ -41,3 +41,5 @@ set-option -sg escape-time 10
 set-option -sa terminal-features ',xterm-256color:RGB'
 
 set -g status-bg colour247
+
+set-option -g renumber-windows on
